--- a/08_canvas-anim/index.html
+++ b/08_canvas-anim/index.html
@@ -18,6 +18,9 @@
   <button id="stop">
     STOP
   </button>
+  <br>
+  <h2> team david wang </h2>
+  <h3> david wang </h3>
   <script src="animate.js">
   </script>
 </html>
